--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Cougar</title>
     <link rel="stylesheet" href="./src/index.css">
+    <link rel="shortcut icon" href="/public/images/360_F_442860899_3HkhrB2RIfx0bOtPH1aseqk50yhm1uYj-removebg-preview(2).png" type="image/x-icon">
   </head>
   <body >
     <div style="min-height: 100%;" id="root"></div>
